--- a/ai-vercel/requirements.txt
+++ b/ai-vercel/requirements.txt
@@ -1,21 +1,5 @@
 
-# AI & Machine Learning
-torch==2.0.0
-scikit-learn==1.3.0
-numpy==1.24.0
-pandas==2.0.0
-
-# Database
-mysql-connector-python==8.0.33
-
-# Web Framework
 flask==2.3.0
 flask-cors==3.0.10
 
-# NLP
-transformers==4.30.0
-sentencepiece==0.1.99
-
-# Optional / tooling
-uvicorn==0.22.0
-werkzeug==2.3.7
+# Keep requirements small for Vercel serverless; heavy ML libs removed for now
