--- a/ai-vercel/vercel.json
+++ b/ai-vercel/vercel.json
@@ -1,14 +1,10 @@
 {
   "version": 2,
-  "functions": {
-    "api/process.py": {
-      "runtime": "python3.11"
-    }
-  },
   "routes": [
     { "src": "/api/process", "dest": "api/process.py" },
-    { "src": "/health", "dest": "api/health.py" },
     { "src": "/api/health", "dest": "api/health.py" },
+    { "src": "/api/debug", "dest": "api/debug.py" },
+    { "src": "/health", "dest": "api/health.py" },
     { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
