--- a/ai-vercel/requirements.txt
+++ b/ai-vercel/requirements.txt
@@ -2,6 +2,4 @@
 flask==2.3.0
 flask-cors==3.0.10
 
-# Keep requirements small for Vercel serverless; heavy ML libs removed for now
-scikit-learn==1.8.0
-joblib==1.5.3
+# Keep requirements small for Vercel serverless: optional ML packages are lazy-loaded
